Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title></title>
 </head>
 <body>
-	HELLO WORD
+	<div>
+		<img src="images/abu.jpg" alt="profile image"/>
+		<h2>ABdu Manjah </h2>
+	</div>
 </body>
 </html>
