adde initil style.css to style the profil

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div>
-		<img src="images/abu.jpg" alt="profile image"/>
-		<h2>ABdu Manjah </h2>
+	<div id="profile-container">
+		<img id="profile-container" src="images/abu.jpg" alt="profil image"/>
+		
+	
+<h2>ABdu Manjah </h2>
 	</div>
 </body>
 </html>
