added initial style.css the profile

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	
 	<div id="profile-container">
-		<img id="profile-container" src="images/abu.jpg" alt="profil image"/>
+		<img id="profile-container" src="images/abdu.jpeg" alt="profil image"/>
 		
 	
-<h2>ABdu Manjah </h2>
+<h2 id="profile-name">Abdu Ibnu Abdika </h2>
+
 	</div>
 </body>
 </html>
